validacion de terminos y condiciones
checkbox menu

--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <section class="principal">
-            <div class="formulario">
+            <form class="formulario">
                 <h3>Registro</h3>
                 
                 <input type="text" placeholder="Nombre" class="controls" id="name" required>
@@ -34,10 +34,11 @@
                 <input type="email" placeholder="Email" class="controls" id="email" required>
 
                 <textarea  placeholder="Mensaje" class="controlsMsg" id="mensaje" required></textarea>
-                <p>Estoy de acuerdo con los <a href="#">terminos y condiciones</a><input type="checkbox"></p>
+
+                <p>Estoy de acuerdo con los <a href="#">terminos y condiciones</a><input type="checkbox" required></p>
                 <input type="submit" value="Enviar" class="button" id="enviar">
                 <p><a href="#">¿Ya tengo una cuenta?</a></p>
-            </div>
+            </form>
             <div class="complemento">
                 <h2>Unete a nosotros</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore eum repellendus iste repudiandae earum. Quasi, voluptas ipsam nisi quibusdam quae alias, adipisci ad officia eaque maiores repudiandae dignissimos maxime quaerat.</p>
